# pypi-packager-mcp

./: README.md  pyproject.toml  requirements.txt
examples/1/mcp_builds/my_pkg/: README.md  pyproject.toml
examples/1/mcp_builds/my_pkg/src/my_pkg.egg-info/: PKG-INFO  SOURCES.txt
src/pypi-packager-mcp/: server.py
tests/: test_server.py
